fix: openapi schema validity
